# bag_of_tech

./: .gitignore  README.md  requirements.txt  setup.cfg
bag_of_tech/celery_framework/: celery_app.py  celeryconfig.py  flowerconfig.py  stackoverflow.py  start.sh  stop.sh  tasks.py  word_cloud.py
bag_of_tech/mongodb/: start.sh
