[metadata]
name = bag_of_tech
author = Chenyuan Zhang
author-email = zhangchenyuan009@gmail.com
summary = A bag of tech stats
description-file = README.md
home-page = https://github.com/ChenyuanZ/bag_of_tech
requires-python = >=3.6
classifier =
    Development Status :: 0 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    bag_of_tech